--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #2ecc71;
-    --secondary-color: #27ae60;
-    --background-color: #f5f6fa;
-    --text-color: #2c3e50;
+    --primary-color: #679436;
+    --secondary-color: #5ca63a;
+    --background-color: #a7cecb;
+    --text-color: #575761;
     --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
